<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:text="@string/workout_title"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:id="@+id/workout_title"
            android:text=""
            android:inputType=
                "textCapSentences|textAutoCorrect"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="wrap_content"
            android:text="@string/workout_user"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:id="@+id/workout_user"
            android:text=""/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workout_file"

        android:onClick="chooseFile"/>
    <SurfaceView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:onClick="addTime"
        android:id="@+id/video_file"
        />
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/exercise">
        <View android:id="@+id/fakeView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/workout_time"
            android:id="@+id/exercise_time"
            android:text=""
            android:inputType="time"
            android:layout_alignParentLeft="true"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/workout_exercise"
            android:id="@+id/exercise_activity"
            android:layout_toRightOf="@id/fakeView"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="addWorkout" />

</LinearLayout>